# nanobind_demo

./: CMakeLists.txt  pyproject.toml
bench/: test.py
src/: x.cpp
src/nbtest/: __init__.py
