[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "nbtest"
version = "0.0.1"
description = ""
requires-python = ">=3.8"

[tool.scikit-build]
editable.rebuild = true
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
PYTHON_VERSION = { env = "PYTHON_VERSION", default = "3.8" }
